# cmake_win_mingw

./: .gitignore  CMakeLists.txt  README.md
scripts/: windows_g++.sh
src/: test.cpp
